Fix flexbox width on Firefox

--- a/assets/css/src/sidebar.css
+++ b/assets/css/src/sidebar.css
@@ -1,6 +1,7 @@
 .sidebar-container {
     margin-top: 10px;
     height: 100%;
+    width: 100%;
     display: -ms-flexbox;
     display: -webkit-box;
     display: -moz-box;
